# LocalAIChat-Android

./: LICENSE  README.md  build.gradle  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  local.properties  settings.gradle  settings.gradle.kts
.github/workflows/: android.yml  build-android.yml  build.yml  setup-project.yml
app/: build.gradle  build.gradle.kts  gradle.properties  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ggml.c  ggml.h  llama.cpp  llama.h  llama_jni.cpp
app/src/main/java/: LocalAIChatApplication.kt
app/src/main/java/com/ai/localchat/: AppDatabase.kt  LocalAIChatApplication.kt  StorageConfig.kt
app/src/main/java/com/ai/localchat/app/: AppApplication.kt  MainActivity.kt
app/src/main/java/com/ai/localchat/dao/: MessageDao.kt
app/src/main/java/com/ai/localchat/entity/: Message.kt
app/src/main/java/com/ai/localchat/manager/: MessageStorageManager.kt
app/src/main/java/com/ai/localchat/viewmodel/: ChatViewModel.kt
app/src/main/java/com/example/localaichat/native/: DeviceProfile.kt  DeviceProfileDetector.kt  Dimensity9300Config.kt  InferenceScheduler.kt  LlamaBridge.kt  LlamaHelper.kt  StreamingGenerator.kt
app/src/main/java/com/example/localaichat/storage/: ImageMemoryStorage.kt  MemoryOverflowHandler.kt  SessionMemoryManager.kt  StorageConfig.kt
app/src/main/java/com/localai/chat/: ChatActivity.kt  DownloadManager.kt  DownloadService.kt  LlamaHelper.kt  MainActivity.kt  MemoryCenterActivity.kt  ModelManagerActivity.kt  ModelRepositoryActivity.kt  MyApplication.kt  SettingsActivity.kt  WebViewActivity.kt  WorkspaceActivity.kt
app/src/main/java/com/localai/chat/adapters/: FileListAdapter.kt  MemoryListAdapter.kt  MessageListAdapter.kt  ModelListAdapter.kt
app/src/main/java/com/localai/chat/chat/: ChatMessage.kt  ChatViewModel.kt
app/src/main/res/drawable/: bg_button_accent.xml  bg_button_primary.xml  bg_card.xml  bg_input.xml  bg_tab_selected.xml  ic_archive.xml  ic_arrow_left.xml  ic_chat.xml  ic_cube.xml  ic_database.xml  ic_download_small.xml  ic_file.xml  ic_gear.xml  ic_memory.xml  ic_menu.xml  ic_phone.xml  ic_robot.xml  ic_select.xml  ic_server.xml  ic_service.xml  ic_settings.xml  ic_sliders.xml  ic_terminal.xml  ic_window.xml  ic_wrench.xml
app/src/main/res/layout/: activity_chat.xml  activity_main.xml  activity_memory_center.xml  activity_model_manager.xml  activity_model_repository.xml  activity_settings.xml  activity_webview.xml  activity_workspace.xml  fragment_chat.xml  fragment_market.xml  fragment_service.xml  fragment_workspace.xml  item_file.xml  item_memory.xml  item_message.xml  item_model.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/res/drawable/: ic_baseline_android_24.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
(+79 files in other folders)
